# OmpToy

./: CMakeLists.txt  README.md
cmake/Modules/: FindOMP.cmake
src/: main.cpp
